Refactoring core functionalities